# PropertyPackages

./: 2025-01-29 11:35:01.893242.json  2025-01-29 11:38:31.246611.json  2025-01-29 11:39:33.068628.json  2025-01-29 11:39:38.910846.json  2025-01-29 11:39:42.151846.json  2025-01-29 11:39:58.556003.json  2025-01-29 11:40:43.078405.json  2025-01-29 11:40:54.915472.json  2025-01-29 11:41:16.467524.json  2025-01-29 11:41:25.300285.json  2025-01-29 11:42:44.053364.json  2025-01-29 11:44:02.937221.json  2025-01-29 11:44:10.061240.json  2025-01-29 11:44:14.365522.json  2025-01-29 11:44:20.722959.json  2025-01-29 11:44:36.519142.json  2025-01-29 11:44:39.941100.json  2025-01-29 11:47:36.380004.json  2025-01-29 11:47:47.739045.json  2025-01-29 11:48:02.475270.json  README.md  constraints.txt  coolprop_surrogate.json  file.txt  file15.txt  file17.txt  file18.txt  file19.txt  file20.txt  file21.txt  file22.txt  file23.txt  file24.py  file3.txt  file3.txt_diff  file4.txt  file5.txt  file5.txt_diff  file6.txt  file6.txt_diff  (+23 more)
.github/workflows/: publish.yml  python.yml
Initial_gen/: Generator.py  Main.py  README.txt  XMLReader.py  build_data_files.py  chem_sep.py  config.py  configuration.json  output.txt  test.py  working config.py
ahuora_compounds/: CompoundDB.py  CompoundRegistry.py  RegistrySearch.py  __init__.py
ahuora_compounds/loaders/: chemsep.py  helmholtz.py  humid_air.py  milk.py  reaction.py  seawater.py
ahuora_compounds/tests/: create_benzene_test.py  (+4 more)
ahuora_property_packages/: build_package.py  types.py
compounds/: Compound.py  CompoundDB.py  CompoundDBv2 (temp).py  CompoundDBv3 (temp).py  CompoundRegistry.py  PropertyPackage.py  README.txt  RegistryLoader.py  RegistrySearch.py  RegistryView.py  __init__.py
property_packages/: __init__.py  build_package.py  chem_sep.py  config.py  configuration.py  types.py
(+751 files in other folders)
