# See https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ahuora-compounds"
version = "0.0.28"

authors = [
  { name="Example Author", email="author@example.com" },
]

description = "Package for compounds and property packages"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "typing-validation",
    "pydantic"
]

[project.optional-dependencies]
property_packages = [
    "idaes-pse",
]

[project.urls]
Homepage = "https://ahuora.org.nz"

[tool.hatch.build.targets.wheel]
packages = ["compounds","property_packages"]
