# See https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ahuora-compounds"
dynamic = ["version"] # version is read from __version__.py see [tool.hatch.version]

authors = [
  { name="Example Author", email="author@example.com" },
]

description = "Package for compounds and property packages"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "typing-validation",
    "pydantic"
]

[project.optional-dependencies]
ahuora_property_packages = [
    "idaes-pse",
]

[project.urls]
Homepage = "https://ahuora.org.nz"

[tool.hatch.build.targets.wheel]
packages = ["ahuora_compounds","ahuora_property_packages"]

[tool.hatch.version]
path = "__version__.py"

[dependency-groups]
dev = [
    "hatch>=1.16.3",
    "pytest>=9.0.2",
]
